# paper-hub.cn

./: .clinerules  .dockerignore  .env.docker  .gitignore  DEPLOYMENT.md  LICENSE  README.md  USAGE.md  docker-compose.yml  env.example  export-by-user.py  import-recommendations.py  import.sh  manage.py  nginx.conf  package-lock.json  package.json  pyproject.toml  requirements.txt  vite.config.js
api/: frontend_api.py  middleware.py  paper.py  urls.py  views.py
backend/: Dockerfile  manage.py  pubmed  pyproject.toml  requirements.txt  requirements_dev.in  requirements_dev.txt
config/: context_processors.py  settings.py  urls.py  wsgi.py
core/: admin.py  models.py  paper.py
frontend/: .editorconfig  .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js  vite.config.ts
group/: admin.py  apps.py  models.py  papers.py  urls.py  views.py
logo/: convert-svg-to-png.sh  paper-hub.psd
mysite/: settings.py  urls.py
openai/: test.py
paperhub/: asgi.py  context_processors.py  settings.py  urls.py  views.py  wsgi.py
scripts/: 001-import-excel.py  001-import-xiangma-excel.py  002-clean-up-paper.py  003-add-labels.py  01-export-all-papers.py  01-list-paper-index.py  02-extract-source-and-index.py  03-fix-paper-info.py  build-static.js  clean-up-paper.py  daily-update.sh  delete-pmids.py  do-import-pubmed-index.py  do-import-recommendations.py  do-remove-pmid.py  export-all-papers.py  export-paper-tracker-data.sh  fix-paper-info.py  import-excel.py  import-pubmed-index.py  import-pubmed.py  import-recommendations.sh  setup.sh  (+6 more)
(+331 files in other folders)
