[project]
name = "paper-hub"
version = "0.1.0"
description = "An easy way to read and share papers for scientific research"
requires-python = ">=3.12"
dependencies = [
    "django",
    "python-dotenv",
    "requests",
    "xmltodict",
    "openai",
    "pandas",
    "openpyxl",
    "socksio",
    "httpcore[socks]",
    "lxml",
    "psycopg2-binary",
    "bottleneck",
    "numexpr",
    "numpy",
    "PySocks",
    "bleach",
    "httpx",
]

[tool.uv]
index-url = "https://mirrors.aliyun.com/pypi/simple/"

