[project]
name = "paper-hub"
version = "0.1.0"
description = "An easy way to read and share papers for scientific research"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.3",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "xmltodict>=1.0.4",
    "openai>=2.24.0",
    "pandas>=3.0.1",
    "openpyxl>=3.1.5",
    "socksio>=1.0.0",
    "httpcore[socks]>=1.0.9",
    "lxml>=6.0.2",
    "psycopg2-binary>=2.9.11",
    "bottleneck>=1.6.0",
    "numexpr>=2.14.1",
    "numpy>=2.4.2",
    "PySocks>=1.7.1",
    "bleach>=6.3.0",
    "httpx>=0.28.1",
]

[tool.uv]
index-url = "https://mirrors.aliyun.com/pypi/simple/"
